# xcloud-mcp

./: .actrc  .containerignore  .coverage  .editorconfig  .env.example  .eslintrc.cjs  .flake8  .gitignore  .npmrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Containerfile  GEMINI.md  LICENSE  MCP_INTEGRATION_REVIEW.md  QUICKSTART.md  README.md  TODO.md  copilot-instruction.md  copilot-instructions.md  isolated-workspace-README.md  launch-isolated.ps1  podman-compose.debug-test.yml  podman-compose.test.yml  podman-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  server.py  tsconfig.json  xcloud-mcp.code-workspace
.gemini/: README.md  settings.json
.github/: CODEOWNERS  app-permissions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/profile/: README.md
.github/workflows/: auto-refactor-issues.yml  ci.yml  codeql-analysis.yml  deploy.yml  gemini-dispatch.yml  gemini-pr-review.yml  gemini-triage.yml  publish.yml
.github/workflows/ISSUE_TEMPLATE/: documentation.yml  workflow.yml
.github/workflows/workflow-templates/: xcloud-bot-setup.properties.json  xcloud-bot-setup.yml
.github/workflows/workflows/: auto-refactor-issues.yml  gemini-dispatch.yml  gemini-triage.yml  issue-management.yml
deploy/: deploy.sh  nginx.conf  xcloud-mcp.service
src/xcloud_mcp/: main.py
tests/: test_server.py  test_tools.py
